# SPDX-FileCopyrightText: 2022 Leiden University Libraries <beheer@library.leidenuniv.nl>
# SPDX-License-Identifier: GPL-3.0-or-later
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maps_tools"
version = "0.1.0"
authors = [
  { name="Ben Companjen", email="ben@companjen.name" },
]
description = "Scripts for getting and processing georeference data"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "click~=8.1",
    "requests~=2.0",
]
[project.optional-dependencies]
dev = [
  "pylint",
  "pytest",
  "pydocstringformatter",
  "mypy",
  "types-requests",
]

[project.urls]
"Homepage" = "https://github.com/LeidenUniversityLibrary/maps-tools"
"Bug Tracker" = "https://github.com/LeidenUniversityLibrary/maps-tools/issues"

[tool.hatch.envs.test]
features = [
  "dev",
]
